[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/MainShell.gd" id=1]

[node name="MainShell" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="RootVBox" type="VBoxContainer" parent="."]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="RootVBox"]
custom_minimum_size = Vector2(0, 40)
size_flags_horizontal = 3
alignment = 1

[node name="TopBarLeft" type="HBoxContainer" parent="RootVBox/TopBar"]
size_flags_horizontal = 1
alignment = 0

[node name="LogoLabel" type="Label" parent="RootVBox/TopBar/TopBarLeft"]
text = "PROMETHEUS C2"

[node name="ModeLabel" type="Label" parent="RootVBox/TopBar/TopBarLeft"]
unique_name_in_owner = true
text = "MODE: PAPER"

[node name="TopBarRight" type="HBoxContainer" parent="RootVBox/TopBar"]
size_flags_horizontal = 3
alignment = 2

[node name="KpiLabel" type="Label" parent="RootVBox/TopBar/TopBarRight"]
unique_name_in_owner = true
text = "P&L TDAY: -- | STAB: -- | LEV: --"

[node name="ClockLabel" type="Label" parent="RootVBox/TopBar/TopBarRight"]
unique_name_in_owner = true
text = "00:00:00"

[node name="MainHBox" type="HBoxContainer" parent="RootVBox"]
size_flags_vertical = 3

[node name="LeftNav" type="VBoxContainer" parent="RootVBox/MainHBox"]
custom_minimum_size = Vector2(220, 0)
size_flags_vertical = 3

[node name="WorkspacesLabel" type="Label" parent="RootVBox/MainHBox/LeftNav"]
text = "WORKSPACES"

[node name="WorkspacesList" type="VBoxContainer" parent="RootVBox/MainHBox/LeftNav"]
unique_name_in_owner = true
size_flags_vertical = 1

[node name="PanelsLabel" type="Label" parent="RootVBox/MainHBox/LeftNav"]
text = "PANELS"

[node name="PanelsList" type="VBoxContainer" parent="RootVBox/MainHBox/LeftNav"]
unique_name_in_owner = true
size_flags_vertical = 3

[node name="CenterArea" type="VBoxContainer" parent="RootVBox/MainHBox"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabBar" type="HBoxContainer" parent="RootVBox/MainHBox/CenterArea"]
custom_minimum_size = Vector2(0, 28)

[node name="TabLabel" type="Label" parent="RootVBox/MainHBox/CenterArea/TabBar"]
unique_name_in_owner = true
text = "Overview"

[node name="PanelHost" type="PanelContainer" parent="RootVBox/MainHBox/CenterArea"]
unique_name_in_owner = true
size_flags_vertical = 3

[node name="RightStrip" type="VBoxContainer" parent="RootVBox/MainHBox"]
custom_minimum_size = Vector2(260, 0)
size_flags_vertical = 3

[node name="AlertsLabel" type="Label" parent="RootVBox/MainHBox/RightStrip"]
text = "ALERTS"

[node name="AlertsContainer" type="VBoxContainer" parent="RootVBox/MainHBox/RightStrip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
size_flags_vertical = 1

[node name="ConsoleLabel" type="Label" parent="RootVBox/MainHBox/RightStrip"]
text = "CONSOLE"

[node name="ConsoleText" type="TextEdit" parent="RootVBox/MainHBox/RightStrip"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
size_flags_vertical = 3
readonly = true
wrap_mode = 1
